# CPCConformerTransfomerSpeakerDiarizationModel

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
cpc_streaming_diarization/: config.py  model.py  utils.py
cpc_streaming_diarization/modules/: activations.py  conformer.py  convolution.py  decoder.py
examples/: diarize.py
